# VideoStreaming

./: .env.prod.example  .gitignore  AWS_DEPLOYMENT.md  AWS_SCRAPER_GUIDE.md  AWS_TEARDOWN.md  BUILD_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  ECS_DEPLOYMENT.md  EKS_DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  QUICK_START.md  README.md  WEBSOCKET_PROXY_CONFIGURATION.md  aws-teardown.sh  build-and-push-optimized.sh  build-and-push-scraper.sh  build-and-push-simple.sh  build-and-push.sh  cleanup-ecr-images-auto.sh  cleanup-ecr-images.sh  cleanup-ecs-for-eks.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  eks-deploy.sh  fix-alb-nodeport-access.sh  fix-database-password.sh  fix-security-groups.sh  init-db.sql  rebuild-scraper.sh  run-db-migration.sh  scrape-video-eks.sh  scrape_urls_server.sh  search_youtube_api.sh  terraform-deploy.sh  traefik.yml
rust-backend/: .dockerignore  .env  Cargo.toml  Dockerfile
rust-backend/.cargo/: config.toml
rust-backend/migrations/: 20250701000001_create_initial_tables.down.sql  20250701000001_create_initial_tables.up.sql  20250703000001_add_video_time_column.down.sql  20250703000002_set_created_at_not_null.down.sql  20250703000003_set_user_id_not_null.down.sql  20250703000004_set_video_id_not_null.down.sql  20250711000001_create_jobs_table.up.sql  20250715000001_add_user_settings.down.sql  20250715000001_add_user_settings.up.sql  20250718000001_add_categories.down.sql  20250718000001_add_categories.up.sql  20250719000001_add_category_icons.down.sql  20250719000001_add_category_icons.up.sql  20250719000002_add_video_duration.down.sql  20250719000002_add_video_duration.up.sql  20250719000003_delete_all_videos.down.sql  20250719000003_delete_all_videos.up.sql  add_video_time_column.sql  set_created_at_not_null.sql
rust-backend/src/: handlers.rs  job_queue.rs  lib.rs  main.rs  models.rs  redis_service.rs  services.rs  video_utils.rs  websocket.rs
youtube-scraper/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
(+63 files in other folders)
