[package]
name = "video_streaming_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-http = "3.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "offline", "chrono", "macros", "json"], default-features = false }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
aws-sdk-s3 = "0.28.0"
aws-config = "0.55.3"
tokio-stream = "0.1.14"
futures = "0.3.28"
ws = "0.9.2"
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.24", features = ["serde"] }
aws-types = "0.55.3"
actix-web-actors = "4.2.0"
actix = "0.13.5"
uuid = { version = "1.3.3", features = ["v4"] }
bytes = "1.10.1"
urlencoding = "2.1.3"
redis = { version = "0.23.0", features = ["tokio-comp"] }

[dev-dependencies]
actix-rt = "2.8.0"
tokio-tungstenite = "0.20.0"
futures-util = "0.3.28"
