[package]
name = "youtube_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "offline", "chrono", "macros", "json"], default-features = false }
dotenv = "0.15.0"
rustube = "0.6.0"
url = "2.4.0"
uuid = { version = "1.3.3", features = ["v4"] }
bytes = "1.4.0"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
aws-sdk-s3 = "0.28.0"
aws-config = "0.55.3"
aws-types = "0.55.3"
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.28"
tokio-stream = "0.1.14"
